Fix some error